--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="col-md-6">
                     <div class="profile-img-container">
                         <!-- Add your profile picture in the images folder -->
-                        <img src="images/profile.jpg" alt="Manesh P" class="img-fluid rounded-circle profile-img">
+                        <img src="./profile.jpg" alt="Manesh P" class="img-fluid rounded-circle profile-img">
                     </div>
                 </div>
                 <div class="col-md-6">
